--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "displayName": "Alias Jump",
   "description": "Jump to definition using path aliases",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.80.0"
   },
@@ -49,6 +49,7 @@
       }
     }
   },
+  "icon": "img/logo.png",
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
